examples/test/testpolicy2829.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2829
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key11: value16
      key19: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value34
          key26: value49
      podSelector:
        matchLabels:
          key8: value49
